--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
   <main>
-    <h1>This is my awesome Olymoic DataViz Project
+    <h1>This is my awesome Olymoic DataViz Project</h1>
+    <h2>soem header here</h2>
+	    <p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio est provident voluptate numquam minus eveniet reiciendis corporis, expedita quasi at, aliquam praesentium recusandae corrupti cum consequatur odit nobis aut ut.
+
+		Ex omnis deleniti vitae, non id, maiores vel. Facere, eveniet dolores? Fugiat esse delectus voluptatum perspiciatis amet, rerum nam repellat laudantium tempore quia voluptate. Repudiandae voluptatum, recusandae culpa iusto et.
+	    </p>
+	<img src="images/Graph_1.png" width="300" alt="chart one">
+	<img src="images/Pie_1.png" width="600" alt="chart one">
   </main>
 </body>
 </html>
