--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Olympic Data Vis</title>
+  <title>Winter Olympic Medals Canada</title>
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <img src="images/logo.png" alt="logo">
+      <div class="subtitle">
+        <h1>Winter Olympics</h1>
+        <h3>1924 - 2014</h3>
+      </div>
+    </div>
+    <div class="title">
+      <h2> Canadian <span class="gold">Gold</span> Medals</h2>
+    </div>
+    <div class="flag">
+      <img src="images/canada-flag.svg" width="70px" alt="flag">
+    </div>
+  </header>
   <main>
-    <h1>This is my awesome Olymoic DataViz Project</h1>
-    <h2>soem header here</h2>
-	    <p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio est provident voluptate numquam minus eveniet reiciendis corporis, expedita quasi at, aliquam praesentium recusandae corrupti cum consequatur odit nobis aut ut.
-
-		Ex omnis deleniti vitae, non id, maiores vel. Facere, eveniet dolores? Fugiat esse delectus voluptatum perspiciatis amet, rerum nam repellat laudantium tempore quia voluptate. Repudiandae voluptatum, recusandae culpa iusto et.
-	    </p>
-	<img src="images/Graph_1.png" width="300" alt="chart one">
-	<img src="images/Pie_1.png" width="600" alt="chart one">
+	<!--<img src="images/Graph_1.png" width="300" alt="chart one">
+	<img src="images/Pie_1.png" width="600" alt="chart one">-->
   </main>
 </body>
 </html>
