Completed website, included python code

--- a/index.html
+++ b/index.html
@@ -25,8 +25,68 @@
     </div>
   </header>
   <main>
-	<!--<img src="images/Graph_1.png" width="300" alt="chart one">
-	<img src="images/Pie_1.png" width="600" alt="chart one">-->
+    <section class="canada">
+      <div class="canadaWinning">
+        <img src="images/canada.jpg" width="414px" alt="canada">
+      </div>
+      <div class="canadaVsUsa">
+        <h2>Canada Vs United States</h2>
+        <p>Canada and the United States both have won many medals in the winter Olympics.  Overall the United States has won more medals in total however Canada has way more gold medals compared to anyone else.  They have way more gold medals than the United States however the United States has the most silver medals.  Canada does very well in winter sports and has the most gold medals.  Canada has also increased its victories in the last few decades.  In conclusion the data below proves Canada’s success.</p>
+      </div>
+    </section>
+    <section class="graphs">
+      <div class="vis">
+        <img src="images/USA.png" width="100%" alt="chart one">
+        <h2>United States Total Medals</h2>
+        <p>In the pie chart above it shows how the USA's medals comprize of mostly silver and only about 25% gold and bronze medals.  Making only about 25
+        </p>
+      </div>
+      <div class="vis">
+        <img src="images/bars.png" width="100%" alt="chart one">
+        <h2>Medals Canada and Uunited States</h2>
+        <p>This graph shows us that USA has mainly silver medals and CAN has mainly gold medals.  It also shows us that Canada has more gold and silver combined then the USA.
+        </p>
+      </div>
+      <div class="vis">
+        <img src="images/plot_goldmedals.png" width="100%" alt="chart one">
+        <h2>Canada's Gold Medals Overtime</h2>
+        <p>This graph gives a good representation of how Canada has been gaining more and more medals overtime.  Canada has increased its yearly gold medals now where it has been getting 60-80 each time.
+        </p>
+      </div>
+      <div class="vis">
+        <img src="images/medalscanada.png" width="100%" alt="chart one">
+        <h2>Canada Total Medals</h2>
+        <p>This graph clearly shows us that canada has majority gold medals and then 30% silver.
+        </p>
+      </div>
+      <div class="vis">
+        <img src="images/total.png" width="100%" alt="chart one">
+        <h2>Medals for each country total</h2>
+        <p>This pie chart shows us that the United States has just a few more medals then Canada in total. But as we saw earlier they have more silver and bronze but Canada has more gold medals.
+        </p>
+      </div>
+      <div class="vis">
+        <img src="images/USACAN.png" width="100%" alt="chart one">
+        <h2>Total Medals Graph</h2>
+        <p>This graph shows us that both the United States and Canada have both been getting more medals in the last few decades then before.  
+        </p>
+      </div>
+    </section>
+    <section class="medalCon">
+      <div class="medal medals ">
+        <h2>Canada has the most Golden Medals</h2>
+        <p>Canada has the most Golden medals of anyone in the Winter Olympics.  Canadians have won first the most times, so although we havent gotten in the top 3 the most.  We have been first the most which is by far an amazing acheivement for Canada.  GO CANADA! </p>
+      </div>
+      <div class="medal">
+        <img src="images/medals.jpg" width="414px" alt="medal">
+      </div>
+    </section>
+    <footer>
+      <p>Designed by Nate Grift</p>
+      <p>Olympic Sports and Medals, 1896-2014
+          Data was provided by the IOC Research and Reference Service and published by The Guardian's Datablog.</p>
+    </footer>
+
   </main>
 </body>
 </html>
